Customizing tha product container and the button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <header>
+        <img class="logo" src="img/buscape-logo.png" alt="Buscapé">
+    </header>
+    <main>
+        <section class="produtos">
+            <div>
+                <!-- imagens -->
+            </div>
+            <div class="produtos__produto">
+                <p>Nome do produto</p>
+                <p>preço parcelado</p>
+                <p>preço à vista</p>
+                <button>Adicionar ao carrinho</button>
+            </div>
+        </section>
+        <section class="produtos">
+            <h1>Hello world!</h1>
+            <h1>Hello world!</h1>
+            <h1>Hello world!</h1>
+        </section>
+        <section class="produtos">
+            <h1>Hello world!</h1>
+            <h1>Hello world!</h1>
+            <h1>Hello world!</h1>
+        </section>
+    </main>
 </body>
 </html>
