--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 <body>
     <header>
         <img class="logo" src="img/buscape-logo.png" alt="Buscapé">
+        <nav class="menu">
+            <svg height="512" width="512" xmlns="http://www.w3.org/2000/svg"><path d="M464.883 64.267H47.117C21.137 64.267 0 85.403 0 111.416c0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149zM464.883 208.867H47.117C21.137 208.867 0 230.003 0 256.016c0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149zM464.883 353.467H47.117C21.137 353.467 0 374.604 0 400.616c0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.012-21.137-47.149-47.117-47.149z"/></svg>
+        </nav>
     </header>
     <main>
         <section class="produtos">
-            <div>
+            <div class="produtos__imagens">
                 <!-- imagens -->
             </div>
             <div class="produtos__produto">
-                <p>Nome do produto</p>
-                <p>preço parcelado</p>
-                <p>preço à vista</p>
-                <button>Adicionar ao carrinho</button>
+                <p class="produto__nome">
+                    Refrigerador Brastemp Iverse BRE50NK 422 Litros Inox
+                    <svg viewBox="0 -28 512.001 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 455.516c-7.29 0-14.316-2.641-19.793-7.438-20.684-18.086-40.625-35.082-58.219-50.074l-.09-.078c-51.582-43.957-96.125-81.918-127.117-119.313C16.137 236.81 0 197.172 0 153.871c0-42.07 14.426-80.883 40.617-109.293C67.121 15.832 103.488 0 143.031 0c29.555 0 56.621 9.344 80.446 27.77C235.5 37.07 246.398 48.453 256 61.73c9.605-13.277 20.5-24.66 32.527-33.96C312.352 9.344 339.418 0 368.973 0c39.539 0 75.91 15.832 102.414 44.578C497.578 72.988 512 111.801 512 153.871c0 43.3-16.133 82.938-50.777 124.738-30.993 37.399-75.532 75.356-127.106 119.309-17.625 15.016-37.597 32.039-58.328 50.168a30.046 30.046 0 01-19.789 7.43zM143.031 29.992c-31.066 0-59.605 12.399-80.367 34.914-21.07 22.856-32.676 54.45-32.676 88.965 0 36.418 13.535 68.988 43.883 105.606 29.332 35.394 72.961 72.574 123.477 115.625l.093.078c17.66 15.05 37.68 32.113 58.516 50.332 20.961-18.254 41.012-35.344 58.707-50.418 50.512-43.051 94.137-80.223 123.469-115.617 30.344-36.618 43.879-69.188 43.879-105.606 0-34.516-11.606-66.11-32.676-88.965-20.758-22.515-49.3-34.914-80.363-34.914-22.758 0-43.653 7.235-62.102 21.5-16.441 12.719-27.894 28.797-34.61 40.047-3.452 5.785-9.53 9.238-16.261 9.238s-12.809-3.453-16.262-9.238c-6.71-11.25-18.164-27.328-34.61-40.047-18.448-14.265-39.343-21.5-62.097-21.5zm0 0"/></svg>
+                </p>
+                <hr/>
+                <div class="produto__preco">
+                    <div>
+                        <p class="produto__preco-parcelado">6x R$ <span>499,83</span></p>
+                        <p class="produto__preco-avista">ou <span>R$ 2.699,30</span> à vista</p>
+                    </div>
+                    <button class="produto__preco-button">Adicionar ao carrinho 
+                        <svg class="produto__preco-button--seta" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.004 492.004"><path d="M382.678 226.804L163.73 7.86C158.666 2.792 151.906 0 144.698 0s-13.968 2.792-19.032 7.86l-16.124 16.12c-10.492 10.504-10.492 27.576 0 38.064L293.398 245.9l-184.06 184.06c-5.064 5.068-7.86 11.824-7.86 19.028 0 7.212 2.796 13.968 7.86 19.04l16.124 16.116c5.068 5.068 11.824 7.86 19.032 7.86s13.968-2.792 19.032-7.86L382.678 265c5.076-5.084 7.864-11.872 7.848-19.088.016-7.244-2.772-14.028-7.848-19.108z"/></svg>
+                    </button>
+                </div>
             </div>
-        </section>
-        <section class="produtos">
-            <h1>Hello world!</h1>
-            <h1>Hello world!</h1>
-            <h1>Hello world!</h1>
-        </section>
-        <section class="produtos">
-            <h1>Hello world!</h1>
-            <h1>Hello world!</h1>
-            <h1>Hello world!</h1>
         </section>
     </main>
 </body>
